added some dummmy data

--- a/social_app/app/static/styles.css
+++ b/social_app/app/static/styles.css
@@ -1,42 +1,77 @@
-.profile-thumbnail {
-    position: absolute;
+body {
+    background-color: #f7f9fa;
+    color: #333;
 }
-.profile-header {
-    min-height: 260px;
-    margin-left: 280px;
+
+/* The place where the logged-in user does the posting */
+.post-area {
+    max-width: 600px;
 }
-div.post-tabs {
-    margin-top: 16px;
-}
+
+/*-----------------------------------------------------------------------------------------------------------------------------------------*/
+/* This is the post part we are styling the single post */
 ul.posts {
+    display: flex;
+    flex-direction: column;
+    max-width: 600px;
     list-style-type: none;
     padding: 0px;
     margin: 16px 0px 0px 0px;
     border-top: 1px solid #e0e0e0;
 }
+
+ul.posts li.post {
+    padding: 10px;
+    border: 1px solid #e0e0e0;
+    margin: 10px 0;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2)
+}
+
+ul.posts li.post:hover {
+    background-color: #fad9d9;
+}
+
+/* style the the profile thumbnail. This is basically the profile
+ * picture of the user
+ */
+div.profile-thumbnail {
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
+/* This is the div that contains the author, body and date*/
+div.post-content {
+    margin-left: 48px;
+    min-height: 48px;
+}
+div.post-date {
+    font-size: 13px;
+    color: #888;
+    float: right;
+}
+div.post-author {
+    text-decoration: None;
+    font-weight: bold;
+    color: #333;
+}
+/*----------------------------------------------------------------------------------------------------------------------------------------*/
+
+
+div.post-tabs {
+    margin-top: 16px;
+}
 div.post-tabs ul.posts {
     margin: 0px;
     border-top: none;
 }
-ul.posts li.post {
-    padding: 8px;
-    border-bottom: 1px solid #e0e0e0;
-}
-ul.posts li.post:hover {
-    background-color: #f0f0f0;
-}
-div.post-date {
-    float: right;
-}
-div.post-author {
-    font-weight: bold;
-}
+
 div.post-thumbnail {
     position: absolute;
-}
-div.post-content {
-    margin-left: 48px;
-    min-height: 48px;
 }
 div.post-footer {
     text-align: right;
