--- a/social_app/app/templates/base.html
+++ b/social_app/app/templates/base.html
@@ -6,6 +6,8 @@
 {{ super() }}
 <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.png') }}" type="image/x-icon">
 <link rel="icon" href="{{ url_for('static', filename='favicon.png') }}" type="image/x-icon">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='user_profile.css') }}">
 {% endblock %}
 
 {% block navbar %}
