--- a/social_app/app/templates/user.html
+++ b/social_app/app/templates/user.html
@@ -2,8 +2,8 @@
 {% block title %}Flasky - {{ user.username }}{% endblock %}
 
 {% block page_content %}
-<div class="page-header" style="display: flex">
-    <img class='img-rounded profile-thumbnail' src="{{ user.gravatar(size=256) }}" style="margin-right: 25px">
+<div class="user_page-header">
+    <img class='img-rounded profile-thumbnail' src="{{ user.gravatar(size=200) }}">
     <div class="profile-header">
         <h1>{{ user.username }}</h1>
         {% if user.name or user.location %}
@@ -18,10 +18,8 @@
         {% endif %}
 
         {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
-        <p>
-        Member since {{ moment(user.member_since).format('L') }}.
-        Last seen {{ moment(user.last_seen).fromNow() }}.
-        </p>
+        <p>Member since {{ moment(user.member_since).format('L') }}.</p>
+        <p>Last seen {{ moment(user.last_seen).fromNow() }}.</p>
 
         {% if user == current_user %}
         <a class="btn btn-default" href="{{ url_for('main.edit_profile') }}">
@@ -33,7 +31,8 @@
             href="{{ url_for('main.edit_profile_admin', id=user.id) }}">
             Edit Profile [Admin]
         </a>
-        {% endif %}
+        {% endif %} 
     </div>
 </div>
+{% include '_posts.html' %}
 {% endblock %}
