Enabled pagination in the rendering of posts in the home page so as to avoid a lot of scrolling

--- a/social_app/app/static/styles.css
+++ b/social_app/app/static/styles.css
@@ -140,3 +140,11 @@ div.flask-pagedown-preview h3 {
 .table.followers tr {
     border-bottom: 1px solid #e0e0e0;
 }
+
+/* this part will style the pagination */
+div.pagination {
+    width: 100%;
+    text-align: left;
+    padding: 0px;
+    margin: 0px;
+}
