We've added permanent links to each post in the app

--- a/social_app/app/static/styles.css
+++ b/social_app/app/static/styles.css
@@ -148,3 +148,7 @@ div.pagination {
     padding: 0px;
     margin: 0px;
 }
+/* The share link section */
+span.badge {
+    background-color: #337ab7;
+}
