--- a/social_app/app/templates/_posts.html
+++ b/social_app/app/templates/_posts.html
@@ -22,6 +22,11 @@
                 {{ post.body }}
                 {% endif %}
             </div>
+            <div class="post-footer">
+                <a href="{{ url_for('main.post', id=post.id) }}">
+                    <span class="badge bg-primary">share</span>
+                </a>
+            </div>
         </div>
     </li>
     {% endfor %}
