--- a/social_app/app/templates/_posts.html
+++ b/social_app/app/templates/_posts.html
@@ -26,6 +26,15 @@
                 <a href="{{ url_for('main.post', id=post.id) }}">
                     <span class="badge bg-primary">share</span>
                 </a>
+                {% if current_user == post.author %}
+                <a href="{{ url_for('main.edit', id=post.id) }}">
+                    <span class="badge bg-danger">Edit</span>
+                </a>
+                {% elif current_user.is_administrator() %}
+                <a href="{{ url_for('main.edit', id=post.id) }}">
+                    <span class="badge bg-danger">Edit [Admin]</span>
+                </a>
+                {% endif %}
             </div>
         </div>
     </li>
